syntax = "proto3";

package ipvs;

option go_package = "./";

message IpvsListRequeste{
	string message=1;
}

message IpvsListResponse{
	string message=1;
}

service IpvsListService{
	// 一个简单的rpc 获取所有的ipvs规则列表
	rpc IpvsList(IpvsListRequeste) returns (IpvsListResponse) {};
}
